# cellGPU_adaptive

./: CMakeLists.txt  Singularity  voronoi_activeBD_friction.cpp
extensions/: CMakeLists.txt
extensions/examples/SDSC EXPANSE/: CMakeLists.txt  compile_with_singularity.sh  submitHPC_singularity.sh
extensions/examples/VACC/: compile_vacc.sh  submitHPC_vacc.sh
extensions/updaters/: selfPropelledParticleWithSimpleFriction.cpp  selfPropelledParticleWithSimpleFriction.cu  selfPropelledParticleWithSimpleFriction.cuh  selfPropelledParticleWithSimpleFriction.h
